--- a/src/language/chinese.json
+++ b/src/language/chinese.json
@@ -68,14 +68,21 @@
       "email": "Email",
       "title":"Email信息"
     },
-    "phone":{
+    "phone": {
       "phone": "联系电话",
       "verify":"是否认证",
       "unverifyTag":"未认证",
       "verifyTag":"已认证",
       "createdTime":"创建时间",
       "default":"默认电话",
-      "btSetDefault":"设为默认"
+      "btSetDefault":"设为默认",
+      "phone2": "手机号码",
+      "tipFindPasswordPhone": "请输入用于找回密码的手机号码",
+      "verifyCode": "验证码",
+      "sendVerifyCode": "发送验证码",
+      "waiting": "等待...",
+      "newPassword": "新密码",
+      "tipNewPassword": "请输入新的密码"
     },
     "realname":{
       "title":"实名信息",
