--- a/src/language/chinese.json
+++ b/src/language/chinese.json
@@ -53,7 +53,10 @@
     "jobLog": "任务日志",
     "jobLogCreate": "创建日志",
     "jobComplete": "验收日志",
-    "jobCompleteCreate": "创建验收日志"
+    "jobCompleteCreate": "创建验收日志",
+    "userActionLog": "用户姓名日志",
+    "userActionLogStatistic": "统计面板",
+    "userActionLogList": "用户行为记录"
   },
   "user": {
     "username":"登录名",
