--- a/src/language/chinese.json
+++ b/src/language/chinese.json
@@ -274,6 +274,6 @@
     "10106": "发送验证码失败",
     "10107": "修改密码失败",
     "10108": "验证码错误",
-    "10109": "验证码已经过期"
+    "20002":"读取用户行为日志失败"
   }
 }
