--- a/src/language/chinese.json
+++ b/src/language/chinese.json
@@ -245,6 +245,19 @@
       "memo": "行为内容"
     }
   },
+  "account":{
+    "myBalance": "我的余额",
+    "withdrawBalance": "账户可用余额",
+    "noneWithdrawBalance": "账户不可用余额",
+    "withdraw": "取现",
+    "amount": "取现金额",
+    "remark": "说明",
+    "tip1": "取现说明",
+    "tip2": "1、可取现金额=账户余额-申诉任务总额，即处于申诉状态的任务金额不能取现。",
+    "tip3": "2、取现申请将在1-7日内处理，请保持电话畅通，等待客服人员联系转账事宜。",
+    "tip4": "3、沟沟团不会收取任何取现费用，但转账时银行、微信或支付宝可能会收取一定手续费。"
+
+  },
   "syserr":{
     "10024":"用户名或密码错误",
     "10031": "读取私有任务失败",
