--- a/src/language/chinese.json
+++ b/src/language/chinese.json
@@ -9,8 +9,10 @@
       "unProcess":"等待处理",
       "reject":"拒绝",
       "agree":"通过",
-      "matching":"等待匹配"
-    }
+      "matching":"等待匹配",
+      "PENDING": "等待处理"
+    },
+    "error": "抱歉，请稍后重试！"
   },
   "navigator": {
     "signIn":"登录",
@@ -56,7 +58,8 @@
     "jobCompleteCreate": "创建验收日志",
     "userActionLog": "用户姓名日志",
     "userActionLogStatistic": "统计面板",
-    "userActionLogList": "用户行为记录"
+    "userActionLogList": "用户行为记录",
+    "myWithdrawList": "我的取现记录"
   },
   "user": {
     "username":"登录名",
@@ -255,8 +258,11 @@
     "tip1": "取现说明",
     "tip2": "1、可取现金额=账户余额-申诉任务总额，即处于申诉状态的任务金额不能取现。",
     "tip3": "2、取现申请将在1-7日内处理，请保持电话畅通，等待客服人员联系转账事宜。",
-    "tip4": "3、沟沟团不会收取任何取现费用，但转账时银行、微信或支付宝可能会收取一定手续费。"
-
+    "tip4": "3、沟沟团不会收取任何取现费用，但转账时银行、微信或支付宝可能会收取一定手续费。",
+    "tipSubmitSuccess": "提交成功，请等待管理员处理。",
+    "tipSubmitFail": "提交失败，请联系管理员处理",
+    "applyTime": "申请时间",
+    "status": "状态"
   },
   "syserr":{
     "10024":"用户名或密码错误",
@@ -295,6 +301,7 @@
     "10106": "发送验证码失败",
     "10107": "修改密码失败",
     "10108": "验证码错误",
-    "20002":"读取用户行为日志失败"
+    "20002":"读取用户行为日志失败",
+    "20004": "余额不足"
   }
 }
