--- a/src/language/chinese.json
+++ b/src/language/chinese.json
@@ -1,48 +1,48 @@
 {
-  "common":{
-    "tipTitleQuestion":"提问",
+  "common": {
+    "tipTitleQuestion": "提问",
     "ok": "确定",
     "cancel": "取消",
     "unRead": "未阅读",
     "submit": "提交",
-    "status":{
-      "unProcess":"等待处理",
-      "reject":"拒绝",
-      "agree":"通过",
-      "matching":"等待匹配",
+    "status": {
+      "unProcess": "等待处理",
+      "reject": "拒绝",
+      "agree": "通过",
+      "matching": "等待匹配",
       "PENDING": "等待处理"
     },
     "error": "抱歉，请稍后重试！"
   },
   "navigator": {
-    "signIn":"登录",
-    "signOut":"退出登录",
-    "language":"语言",
-    "createTask":"创建项目",
-    "spotlight":"申诉广场",
-    "myJob":"我的Job",
-    "dashboard":"控制台",
-    "myApply":"我申请的任务",
-    "partyA":"我是甲方",
-    "partyB":"我是乙方",
-    "myPending":"我发布的任务",
-    "myTask":"我的Task",
-    "myProfile":"我的信息",
-    "myAccount":"我的账户",
-    "myHonor":"我的荣誉",
-    "administrator":"RPG管理员",
-    "secretary":"RPG秘书",
-    "matchJob":"匹配任务",
-    "topUp":"充值",
+    "signIn": "登录",
+    "signOut": "退出登录",
+    "language": "语言",
+    "createTask": "创建项目",
+    "spotlight": "申诉广场",
+    "myJob": "我的Job",
+    "dashboard": "控制台",
+    "myApply": "我申请的任务",
+    "partyA": "我是甲方",
+    "partyB": "我是乙方",
+    "myPending": "我发布的任务",
+    "myTask": "我的Task",
+    "myProfile": "我的信息",
+    "myAccount": "我的账户",
+    "myHonor": "我的荣誉",
+    "administrator": "RPG管理员",
+    "secretary": "RPG秘书",
+    "matchJob": "匹配任务",
+    "topUp": "充值",
     "myAcceptJob": "验收合格任务",
-    "publicJobBoard":"任务广场",
+    "publicJobBoard": "任务广场",
     "editTask": "编辑任务",
     "taskDetail": "任务详情",
     "subTaskPage": "子任务",
     "publishTask": "发布任务",
     "registerByEmail": "Email注册",
     "jobDetail": "任务详情",
-    "submitUserProfile":"实名认证",
+    "submitUserProfile": "实名认证",
     "myAccountLedger": "我的账户流水",
     "myHonorLedger": "我的荣誉值流水",
     "applyJob": "申请任务",
@@ -64,8 +64,8 @@
     "userWithdrawApply": "用户取现申请"
   },
   "user": {
-    "username":"登录名",
-    "usernamePlaceholder":"Eail/Phone",
+    "username": "登录名",
+    "usernamePlaceholder": "Eail/Phone",
     "emailPlaceholder": "请输入Email",
     "password": "密码",
     "passwordPlaceholder": "请输入登录密码",
@@ -73,25 +73,26 @@
     "password2Placeholder": "请再次确认登录密码",
     "btRegister": "注册",
     "btLogin": "登录",
-    "err2":"请输入Email",
-    "err3":"用户名必须是Email格式",
+    "err2": "请输入Email",
+    "err3": "用户名必须是Email格式",
     "err1": "两次输入的密码不一致",
-    "err4":"该Email已被其他用户使用了",
+    "err4": "该Email已被其他用户使用了",
     "realName": "真实姓名",
+    "realNameHolder": "请输入真实姓名",
     "btVerifyRealname": "实名认证",
     "btSaveUserInfo": "提交",
-    "email":{
+    "email": {
       "email": "Email",
-      "title":"Email信息"
+      "title": "Email信息"
     },
     "phone": {
       "phone": "手机号码",
-      "verify":"是否认证",
-      "unverifyTag":"未认证",
-      "verifyTag":"已认证",
-      "createdTime":"创建时间",
-      "default":"默认电话",
-      "btSetDefault":"设为默认",
+      "verify": "是否认证",
+      "unverifyTag": "未认证",
+      "verifyTag": "已认证",
+      "createdTime": "创建时间",
+      "default": "默认电话",
+      "btSetDefault": "设为默认",
       "phone2": "手机号码",
       "tipFindPasswordPhone": "请输入用于找回密码的手机号码",
       "verifyCode": "验证码",
@@ -104,12 +105,13 @@
       "phoneHolder": "请输入注册的手机号码",
       "phoneOccupied": "手机号码重复了",
       "tipSendSMSSuccess": "发送验证码成功，请等待查看您的手机短信",
-      "tipSendSMSFail": "发送验证码失败"
+      "tipSendSMSFail": "发送验证码失败",
+      "formatError": "手机号码啊格式不正确"
     },
-    "realname":{
-      "title":"实名信息",
-      "realName":"真实姓名",
-      "realNameCertify":"实名认证",
+    "realname": {
+      "title": "实名信息",
+      "realName": "真实姓名",
+      "realNameCertify": "实名认证",
       "idCardNo": "身份证号码",
       "sex": "性别",
       "male": "男",
@@ -119,14 +121,14 @@
       "tipSaveError": "保存失败"
     },
     "account": {
-      "createdTime":"发生时间",
+      "createdTime": "发生时间",
       "TOP_UP": "充值",
       "WITHDRAW": "取现",
       "PUBLISH": "发布任务",
       "ACCEPT": "接受任务",
       "REFUND": "退还任务款",
-      "amount":"金额",
-      "type":"类别",
+      "amount": "金额",
+      "type": "类别",
       "balance": "余额",
       "income": "收入",
       "outgoing": "支出"
@@ -136,55 +138,57 @@
       "balance": "荣誉值",
       "balanceIn": "获得荣誉值",
       "balanceOut": "扣除荣誉值",
-      "createdTime":"发生时间",
+      "createdTime": "发生时间",
       "honorPoint": "荣誉值",
       "honorType": "类别",
       "JOB_ACCEPTED": "验收和合格",
       "CREATE_SPOTLIGHT": "被甲方申诉"
     }
   },
-  "task":{
-    "btCreate":"创建Task",
-    "title":"标题",
-    "code":"项目代号",
-    "detail":"详情",
-    "days":"天数",
-    "price":"金额",
-    "createdUserName":"创建人",
-    "createdTime":"创建时间",
-    "delete":"删除",
-    "tipDelete":"确定要删除任务？",
-    "update":"修改",
-    "subTask":"子任务",
-    "freelancer":"发布",
-    "complete":"完成",
-    "addSubTaskTitle":"创建子任务",
-    "tipSubTask1":"必须输入子任务名称"
+  "task": {
+    "btCreate": "创建Task",
+    "title": "标题",
+    "code": "项目代号",
+    "detail": "详情",
+    "days": "天数",
+    "price": "金额",
+    "createdUserName": "创建人",
+    "createdTime": "创建时间",
+    "delete": "删除",
+    "tipDelete": "确定要删除任务？",
+    "update": "修改",
+    "subTask": "子任务",
+    "freelancer": "发布",
+    "complete": "完成",
+    "addSubTaskTitle": "创建子任务",
+    "tipSubTask1": "必须输入子任务名称",
+    "errTitle": "请输入任务标题"
+
   },
-  "job":{
-    "publish":"发布任务",
+  "job": {
+    "publish": "发布任务",
     "succPublish": "恭喜，发布任务成功！",
     "partyAName": "甲方",
     "partyBName": "乙方",
     "publishTime": "发布时间",
     "applyTime": "申请时间",
     "applyUserNum": "申请人数",
-    "btApplyJob":"申请任务",
-    "applyTitle1":"申请任务",
-    "applyTitle2":"申请任务时请简要说明自己的优势，个人信息或作品链接，以便RPG秘书处理。",
-    "applyTitle3":"感谢您的申请，我们将立即分配RPG秘书为您提供后续服务。",
-    "applyContent":"申请说明",
-    "btDelete":"删除",
+    "btApplyJob": "申请任务",
+    "applyTitle1": "申请任务",
+    "applyTitle2": "申请任务时请简要说明自己的优势，个人信息或作品链接，以便RPG秘书处理。",
+    "applyTitle3": "感谢您的申请，我们将立即分配RPG秘书为您提供后续服务。",
+    "applyContent": "申请说明",
+    "btDelete": "删除",
     "deleteTip": "任务删除后不可恢复，确定要删除吗？",
     "deleteTipSuccess": "任务删除成功",
-    "btUpdate":"修改",
+    "btUpdate": "修改",
     "updateTipSucess": "任务修改成功",
-    "contractTime":"签约时间",
+    "contractTime": "签约时间",
     "tabLog": "日志",
     "tabComplete": "验收",
     "tabStop": "终止",
     "tabSpotlight": "申诉",
-    "tbCreateLog":"创建日志",
+    "tbCreateLog": "创建日志",
     "log": {
       "content": "日志内容",
       "btCreate": "创建日志",
@@ -217,30 +221,30 @@
     },
     "jobStatus": "任务状态"
   },
-  "admin":{
-    "loginPage":{
-      "tip1":"管理员登录",
-      "username":"用户名",
-      "usernamePlaceholder":"请输入用户名",
-      "password":"密码",
-      "passwordPlaceholder":"请输入密码",
-      "btLogin":"登录",
+  "admin": {
+    "loginPage": {
+      "tip1": "管理员登录",
+      "username": "用户名",
+      "usernamePlaceholder": "请输入用户名",
+      "password": "密码",
+      "passwordPlaceholder": "请输入密码",
+      "btLogin": "登录",
       "forgetPassword": "忘记密码？"
     },
-    "admin":{},
-    "secretary":{
-      "btAgree":"同意",
-      "btReject":"拒绝",
-      "tipAgreeMatch":"确定要把该任务分配给该用户吗？",
-      "tipRejectMatch":"确定要拒绝该用户的的申请吗？",
-      "placeholderReject":"请说明拒绝该用户的理由",
-      "tipRejectSuccess":"拒绝用户申请成功",
-      "tipAgreeSuccess":"分配任务成功",
-      "applyTime":"申请时间",
-      "price":"申请的任务金额",
-      "applyProcessResult":"申请处理结果",
-      "jobStatus":"申请任务当前的状态",
-      "applyUsername":"申请用户"
+    "admin": {},
+    "secretary": {
+      "btAgree": "同意",
+      "btReject": "拒绝",
+      "tipAgreeMatch": "确定要把该任务分配给该用户吗？",
+      "tipRejectMatch": "确定要拒绝该用户的的申请吗？",
+      "placeholderReject": "请说明拒绝该用户的理由",
+      "tipRejectSuccess": "拒绝用户申请成功",
+      "tipAgreeSuccess": "分配任务成功",
+      "applyTime": "申请时间",
+      "price": "申请的任务金额",
+      "applyProcessResult": "申请处理结果",
+      "jobStatus": "申请任务当前的状态",
+      "applyUsername": "申请用户"
     },
     "userActionLog": {
       "logId": "日志Id",
@@ -250,7 +254,7 @@
       "memo": "行为内容"
     }
   },
-  "account":{
+  "account": {
     "myBalance": "我的余额",
     "withdrawBalance": "账户可用余额",
     "noneWithdrawBalance": "账户不可用余额",
@@ -267,23 +271,23 @@
     "status": "状态",
     "balance": "账户余额"
   },
-  "syserr":{
-    "10024":"用户名或密码错误",
+  "syserr": {
+    "10024": "用户名或密码错误",
     "10031": "读取私有任务失败",
     "10095": "统计子任务数量错误",
-    "10119":"读取未阅读日志错误",
+    "10119": "读取未阅读日志错误",
     "10028": "读取用户信息失败",
     "10048": "保存用户联系信息失败。",
     "10037": "你不能申请自己创建的任务",
     "10033": "申请任务失败",
     "10007": "你已经申请过当前任务了，请耐心等待管理员处理。",
     "10046": "这个手机号码已经被其他用户使用了。",
-    "10120":"读取我发布的新任务错误",
-    "10121":"读取我申请的新任务错误",
-    "10122":"读取任务详情错误",
-    "10109":"读取新申请的任务失败",
-    "10123":"读取任务申请详情错误",
-    "10124":"读取电话号码失败",
+    "10120": "读取我发布的新任务错误",
+    "10121": "读取我申请的新任务错误",
+    "10122": "读取任务详情错误",
+    "10109": "读取新申请的任务失败",
+    "10123": "读取任务申请详情错误",
+    "10124": "读取电话号码失败",
     "10125": "读取用户详细信息错误",
     "10126": "保存实习信息错误",
     "10127": "只有甲方用户能拒绝验收",
@@ -304,7 +308,10 @@
     "10106": "发送验证码失败",
     "10107": "修改密码失败",
     "10108": "验证码错误",
-    "20002":"读取用户行为日志失败",
-    "20004": "余额不足"
+    "20002": "读取用户行为日志失败",
+    "20004": "余额不足",
+    "30000": "抱歉，由于未知原因，操作失败了",
+    "30008": "请填写您的真实姓名",
+    "30012": "短信验证码已过期"
   }
 }
