第三次改版完成

--- a/src/language/chinese.json
+++ b/src/language/chinese.json
@@ -142,7 +142,8 @@
       "honorPoint": "荣誉值",
       "honorType": "类别",
       "JOB_ACCEPTED": "验收和合格",
-      "CREATE_SPOTLIGHT": "被甲方申诉"
+      "CREATE_SPOTLIGHT": "被甲方申诉",
+      "jobTitle": "关联任务"
     }
   },
   "task": {
@@ -162,7 +163,14 @@
     "complete": "完成",
     "addSubTaskTitle": "创建子任务",
     "tipSubTask1": "必须输入子任务名称",
-    "errTitle": "请输入任务标题"
+    "errTitle": "请输入任务标题",
+    "checkPrice": "请输入任务金额",
+    "publishTaskFail": "发布任务失败",
+    "checkTitle": "请填写任务标题",
+    "checkDays": "请设置任务天数",
+    "checkDetail": "请描述任务详情"
+
+
 
   },
   "job": {
@@ -312,6 +320,12 @@
     "20004": "余额不足",
     "30000": "抱歉，由于未知原因，操作失败了",
     "30008": "请填写您的真实姓名",
-    "30012": "短信验证码已过期"
+    "30012": "短信验证码已过期",
+    "10044": "该Email已经被注册过了",
+    "10006": "当前任务不在可申请状态，申请失败",
+    "10040": "您不是RPG秘书，没有操作权限",
+    "30005": "只能删除等待匹配的任务",
+    "30014": "您没有创建任务日志的权限",
+    "30015": "没有查找到该任务的验收申请日志"
   }
 }
