--- a/src/language/chinese.json
+++ b/src/language/chinese.json
@@ -326,6 +326,9 @@
     "10040": "您不是RPG秘书，没有操作权限",
     "30005": "只能删除等待匹配的任务",
     "30014": "您没有创建任务日志的权限",
-    "30015": "没有查找到该任务的验收申请日志"
+    "30015": "没有查找到该任务的验收申请日志",
+    "30016":"只能验收通过进行中的任务",
+    "30017": "该任务已经有人申请了，不能修改了",
+    "30018": "该任务不是等待申请状态，不能修改"
   }
 }
