增加了登录时网络错误的提示 修改了修改已发布任务时图片不能调整大小的问题

--- a/src/language/chinese.json
+++ b/src/language/chinese.json
@@ -334,6 +334,7 @@
     "30015": "没有查找到该任务的验收申请日志",
     "30016":"只能验收通过进行中的任务",
     "30017": "该任务已经有人申请了，不能修改了",
-    "30018": "该任务不是等待申请状态，不能修改"
+    "30018": "该任务不是等待申请状态，不能修改",
+    "30019": "网络错误"
   }
 }
