--- a/src/language/chinese.json
+++ b/src/language/chinese.json
@@ -339,6 +339,9 @@
     "30016":"只能验收通过进行中的任务",
     "30017": "该任务已经有人申请了，不能修改了",
     "30018": "该任务不是等待申请状态，不能修改",
-    "30019": "网络错误"
+    "30019": "网络错误",
+    "30020": "没有找到该日志",
+    "30021": "对方已阅读该日志，不能删除",
+    "30022": "你只能删除你自己创建的日志"
   }
 }
