--- a/src/language/chinese.json
+++ b/src/language/chinese.json
@@ -206,7 +206,8 @@
       "tipConfirmDeteleLog": "确认要删除该日志吗？",
       "tip1": "日志对方已阅读，不能删除",
       "tip2": "日志删除成功",
-      "tip3": "日志删除失败"
+      "tip3": "日志删除失败",
+      "tip4": "日志对方已阅读，不能修改"
     },
     "jobComplete": {
       "content": "完成说明",
