--- a/src/language/chinese.json
+++ b/src/language/chinese.json
@@ -54,6 +54,7 @@
     "registerByPhone": "手机号码注册",
     "jobLog": "任务日志",
     "jobLogCreate": "创建日志",
+    "jobLogUpdate": "修改日志",
     "jobComplete": "验收日志",
     "jobCompleteCreate": "创建验收日志",
     "userActionLog": "用户姓名日志",
@@ -207,7 +208,9 @@
       "tip1": "日志对方已阅读，不能删除",
       "tip2": "日志删除成功",
       "tip3": "日志删除失败",
-      "tip4": "日志对方已阅读，不能修改"
+      "tip4": "日志对方已阅读，不能修改",
+      "btUpdate": "修改日志",
+      "tip5": "日志修改成功"
     },
     "jobComplete": {
       "content": "完成说明",
@@ -343,6 +346,8 @@
     "30019": "网络错误",
     "30020": "没有找到该日志",
     "30021": "对方已阅读该日志，不能删除",
-    "30022": "你只能删除你自己创建的日志"
+    "30022": "你只能删除你自己创建的日志",
+    "30023": "只有日志创建人才能修改日志",
+    "30024": "对方已阅读该日志，不能修改了"
   }
 }
